[gd_scene load_steps=24 format=3 uid="uid://tr660l4oomhm"]

[ext_resource type="Texture2D" uid="uid://cf2sbqwtsq0vd" path="res://Sprites/book/book.png" id="1_rktjd"]
[ext_resource type="Script" path="res://Scenes/Book/Script/book.gd" id="1_w6myh"]
[ext_resource type="Script" path="res://Scenes/Book/Script/RegionTitlePage.gd" id="2_4ahq4"]
[ext_resource type="LabelSettings" uid="uid://b11e7oyd37eom" path="res://Themes/TitleLabel.tres" id="2_aod8j"]
[ext_resource type="Texture2D" uid="uid://du82lmn8mf8et" path="res://Sprites/book/closedFront.png" id="2_jrsgf"]
[ext_resource type="PackedScene" uid="uid://ce1p1s1byjllv" path="res://Scenes/Book/quest_page.tscn" id="2_vl5qr"]
[ext_resource type="Texture2D" uid="uid://1xio2uxvuhve" path="res://Sprites/book/closedBack.png" id="3_lfrtr"]
[ext_resource type="Theme" uid="uid://dgifmyw55byck" path="res://Themes/UIButton.tres" id="4_cdtq7"]
[ext_resource type="Texture2D" uid="uid://dxc67woulqfnb" path="res://Sprites/book/ForestEdit.png" id="4_u7d7b"]
[ext_resource type="LabelSettings" uid="uid://dw18pcv0wtiom" path="res://Themes/BodyLabel.tres" id="5_iiqke"]
[ext_resource type="Texture2D" uid="uid://d2btesxa75k36" path="res://Sprites/book/bookmarkCoveredGlow.png" id="5_qnjho"]
[ext_resource type="Texture2D" uid="uid://dde35b4ko241e" path="res://Sprites/book/map.png" id="7_2h8yx"]
[ext_resource type="Texture2D" uid="uid://cnq33yf2cm21l" path="res://Sprites/Enemies/fairy.png" id="7_sxw0x"]
[ext_resource type="Script" path="res://Scenes/Book/Script/TableOfContents.gd" id="7_v5i45"]
[ext_resource type="Texture2D" uid="uid://be6a53ra2u5q5" path="res://Sprites/book/bookmark.png" id="8_00kf0"]
[ext_resource type="Texture2D" uid="uid://ot02xp1yo4ha" path="res://Sprites/Enemies/snake.png" id="8_hgdp7"]
[ext_resource type="LabelSettings" uid="uid://cb4eflp81bok5" path="res://Themes/HeaderLabel.tres" id="12_pafpr"]
[ext_resource type="PackedScene" uid="uid://bbqavw5571ou3" path="res://Scenes/Book/help.tscn" id="13_u6qfh"]
[ext_resource type="PackedScene" uid="uid://dbpw77fbrbkms" path="res://Scenes/Book/settings.tscn" id="13_vb34e"]
[ext_resource type="Texture2D" uid="uid://c1fkji0reudii" path="res://Sprites/book/bookmarkCovered.png" id="19_dcs5j"]
[ext_resource type="PackedScene" uid="uid://bnj4eo8jhgckt" path="res://Scenes/glow_button.tscn" id="21_p4uyu"]
[ext_resource type="Texture2D" uid="uid://h4p464o8n2wk" path="res://Sprites/book/pageglow.png" id="22_sovvs"]
[ext_resource type="Texture2D" uid="uid://cgj7tdeex32ib" path="res://Sprites/book/Logo.png" id="23_0vgu4"]

[node name="Book" type="Node2D"]
script = ExtResource("1_w6myh")
pageBuffer = 3

[node name="Control" type="ColorRect" parent="."]
z_index = -1
offset_left = -1222.0
offset_top = -717.0
offset_right = 1221.0
offset_bottom = 718.0
color = Color(0, 0, 0, 0.247059)

[node name="Exit" type="Button" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -1055.0
offset_top = -651.0
offset_right = 1080.0
offset_bottom = 681.0
grow_horizontal = 2
grow_vertical = 2
flat = true

[node name="Front" type="TextureRect" parent="."]
visible = false
offset_top = -500.0
offset_right = 747.0
offset_bottom = 501.0
texture = ExtResource("2_jrsgf")

[node name="Home" parent="Front" instance=ExtResource("21_p4uyu")]
z_index = -1
layout_mode = 0
offset_left = 99.0
offset_top = 956.0
offset_right = 165.0
offset_bottom = 1041.0
scale = Vector2(-1, 1)
icon = ExtResource("19_dcs5j")
glowSprite = ExtResource("5_qnjho")

[node name="Back" type="TextureRect" parent="."]
visible = false
offset_left = -747.0
offset_top = -500.0
offset_bottom = 501.0
texture = ExtResource("3_lfrtr")

[node name="Home" parent="Back" instance=ExtResource("21_p4uyu")]
z_index = -1
layout_mode = 0
offset_left = 646.0
offset_top = 956.0
offset_right = 712.0
offset_bottom = 1041.0
icon = ExtResource("19_dcs5j")
glowSprite = ExtResource("5_qnjho")

[node name="BookBase" type="TextureRect" parent="."]
offset_left = -747.0
offset_top = -500.0
offset_right = 747.0
offset_bottom = 500.0
texture = ExtResource("1_rktjd")

[node name="Home" parent="BookBase" instance=ExtResource("21_p4uyu")]
z_index = 1
layout_mode = 0
offset_left = 684.0
offset_top = 955.0
offset_right = 750.0
offset_bottom = 1040.0
icon = ExtResource("19_dcs5j")
glowSprite = ExtResource("5_qnjho")

[node name="TitlePage" type="Node2D" parent="."]
visible = false

[node name="TableOfContents" type="Node2D" parent="TitlePage"]
position = Vector2(112, -310)
script = ExtResource("7_v5i45")
headers = Array[Array]([["Tutorial"], ["Settings"], ["Creatures & Regions"]])

[node name="Text" type="ColorRect" parent="TitlePage/TableOfContents"]
clip_children = 1
offset_right = 410.0
offset_bottom = 700.0

[node name="Label" type="Label" parent="TitlePage"]
offset_left = -717.0
offset_top = -460.0
offset_right = -16.0
offset_bottom = 415.0
text = "Adventurer's
Handbook"
label_settings = ExtResource("2_aod8j")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Title" type="Label" parent="TitlePage"]
offset_left = 14.0
offset_top = -398.0
offset_right = 671.0
offset_bottom = -329.0
text = "Table of Contents"
label_settings = ExtResource("12_pafpr")
horizontal_alignment = 1

[node name="Sprite2D" type="Sprite2D" parent="TitlePage"]
position = Vector2(-30, 34)
texture = ExtResource("8_00kf0")

[node name="EnemyInfo" type="Node2D" parent="."]
visible = false

[node name="QuestPage" parent="EnemyInfo" instance=ExtResource("2_vl5qr")]
visible = false
position = Vector2(-495, -284)

[node name="RegionTitlePage" type="Node2D" parent="EnemyInfo"]
visible = false
script = ExtResource("2_4ahq4")

[node name="Map" type="Sprite2D" parent="EnemyInfo/RegionTitlePage"]
texture = ExtResource("4_u7d7b")

[node name="Title" type="Label" parent="EnemyInfo/RegionTitlePage"]
offset_left = 61.0
offset_top = -424.0
offset_right = 660.0
offset_bottom = -280.0
text = "Forest"
label_settings = ExtResource("2_aod8j")
horizontal_alignment = 1

[node name="Description" type="Label" parent="EnemyInfo/RegionTitlePage"]
offset_left = 69.0
offset_top = 2.0
offset_right = 668.0
offset_bottom = 379.0
text = "The mountains are where most adventurers go in search of glory and wealth. The terrain is treacherous, and the creatures in the region are very powerful. Since it's so dangerous, almost everything you can find there is valuable. Even seemingly mundane items can be of interest to researchers."
label_settings = ExtResource("5_iiqke")
autowrap_mode = 2

[node name="Creatures" type="Label" parent="EnemyInfo/RegionTitlePage"]
offset_left = 123.0
offset_top = -284.0
offset_right = 362.0
offset_bottom = -215.0
text = "Creatures"
label_settings = ExtResource("12_pafpr")

[node name="Forest" type="Node2D" parent="EnemyInfo/RegionTitlePage/Creatures"]
visible = false
position = Vector2(0, 80)
script = ExtResource("7_v5i45")
headers = Array[Array]([["Goblin"], ["Serpent"], ["Fairy"]])
pageNums = Array[int]([2, 4, 6])

[node name="Text" type="ColorRect" parent="EnemyInfo/RegionTitlePage/Creatures/Forest"]
clip_children = 1
offset_right = 410.0
offset_bottom = 408.0

[node name="Desert" type="Node2D" parent="EnemyInfo/RegionTitlePage/Creatures"]
visible = false
position = Vector2(0, 80)
script = ExtResource("7_v5i45")
headers = Array[Array]([["Gold Beetle"], ["Magma Lizard"], ["Fire Spirit"]])
pageNums = Array[int]([2, 4, 6])

[node name="Text" type="ColorRect" parent="EnemyInfo/RegionTitlePage/Creatures/Desert"]
clip_children = 1
offset_right = 410.0
offset_bottom = 408.0

[node name="Mountain" type="Node2D" parent="EnemyInfo/RegionTitlePage/Creatures"]
position = Vector2(0, 80)
script = ExtResource("7_v5i45")
headers = Array[Array]([["Animated Armor"], ["Wyvern"], ["Mimic"], ["Dragon"]])
pageNums = Array[int]([2, 4, 6, 8])

[node name="Text" type="ColorRect" parent="EnemyInfo/RegionTitlePage/Creatures/Mountain"]
clip_children = 1
offset_right = 410.0
offset_bottom = 408.0

[node name="MapTitlePage" type="Node2D" parent="EnemyInfo"]
visible = false

[node name="Map" type="Sprite2D" parent="EnemyInfo/MapTitlePage"]
position = Vector2(-360, 213)
texture = ExtResource("7_2h8yx")

[node name="Fairy" type="Sprite2D" parent="EnemyInfo/MapTitlePage"]
visible = false
position = Vector2(487, -357)
scale = Vector2(0.8, 0.8)
texture = ExtResource("7_sxw0x")

[node name="Snake" type="Sprite2D" parent="EnemyInfo/MapTitlePage"]
visible = false
position = Vector2(-580, -208)
scale = Vector2(0.75, 0.75)
texture = ExtResource("8_hgdp7")

[node name="Label" type="Label" parent="EnemyInfo/MapTitlePage"]
offset_left = 134.0
offset_top = -386.0
offset_right = 354.0
offset_bottom = -317.0
text = "Contents"
label_settings = ExtResource("12_pafpr")

[node name="Title" type="Label" parent="EnemyInfo/MapTitlePage"]
offset_left = -587.0
offset_top = -411.0
offset_right = -113.0
offset_bottom = 6.0
text = "Creatures
&
Regions"
label_settings = ExtResource("2_aod8j")
horizontal_alignment = 1

[node name="Buttons" type="Node2D" parent="EnemyInfo/MapTitlePage"]
position = Vector2(133, -296)
script = ExtResource("7_v5i45")
headers = Array[Array]([["Forest", "Goblin", "Serpent", "Fairy"], ["Desert", "Gold Beetle", "Magma Lizard", "Fire Spirit"], ["Mountains", "Animated Armor", "Wyvern", "Mimic", "Dragon"]])
pageNums = Array[int]([2, 4, 6, 8, 10, 12, 14, 16, 18, 20, 22, 24, 26, 28])
pageNumStart = 10

[node name="Text" type="ColorRect" parent="EnemyInfo/MapTitlePage/Buttons"]
clip_children = 1
offset_right = 410.0
offset_bottom = 700.0

[node name="Help" parent="." instance=ExtResource("13_u6qfh")]
visible = false
position = Vector2(-465, -440)

[node name="Settings" parent="." instance=ExtResource("13_vb34e")]
visible = false
position = Vector2(-832, -467)

[node name="Credits" type="Node2D" parent="."]
visible = false

[node name="Label" type="Label" parent="Credits"]
offset_left = -526.0
offset_top = -432.0
offset_right = -184.0
offset_bottom = -295.0
text = "Credits"
label_settings = ExtResource("2_aod8j")

[node name="VBoxContainer" type="VBoxContainer" parent="Credits"]
offset_left = -657.0
offset_top = -278.0
offset_right = -48.0
offset_bottom = 540.0
theme_override_constants/separation = -6

[node name="Label11" type="Label" parent="Credits/VBoxContainer"]
layout_mode = 2
text = "Code + Art by OrusLiOx

"
label_settings = ExtResource("5_iiqke")
horizontal_alignment = 1

[node name="Label10" type="Label" parent="Credits/VBoxContainer"]
layout_mode = 2
text = "Music / Sound"
label_settings = ExtResource("5_iiqke")
horizontal_alignment = 1

[node name="Label9" type="Label" parent="Credits/VBoxContainer"]
layout_mode = 2
text = "Music"
label_settings = ExtResource("5_iiqke")

[node name="LinkButton9" type="LinkButton" parent="Credits/VBoxContainer"]
layout_mode = 2
theme = ExtResource("4_cdtq7")
text = "https://pixabay.com/music/ambient-midnight-forest-184304/"
uri = "https://pixabay.com/music/ambient-midnight-forest-184304/"

[node name="Label" type="Label" parent="Credits/VBoxContainer"]
layout_mode = 2
text = "Open Book"
label_settings = ExtResource("5_iiqke")

[node name="LinkButton" type="LinkButton" parent="Credits/VBoxContainer"]
layout_mode = 2
theme = ExtResource("4_cdtq7")
text = "https://pixabay.com/sound-effects/page-flip-47177/"
uri = "https://pixabay.com/sound-effects/page-flip-47177/"

[node name="Label2" type="Label" parent="Credits/VBoxContainer"]
layout_mode = 2
text = "Close Book"
label_settings = ExtResource("5_iiqke")

[node name="LinkButton2" type="LinkButton" parent="Credits/VBoxContainer"]
layout_mode = 2
theme = ExtResource("4_cdtq7")
text = "https://pixabay.com/sound-effects/closing-a-book-14771/"
uri = "https://pixabay.com/sound-effects/closing-a-book-14771/"

[node name="Label3" type="Label" parent="Credits/VBoxContainer"]
layout_mode = 2
text = "Page Flip / Map"
label_settings = ExtResource("5_iiqke")

[node name="LinkButton3" type="LinkButton" parent="Credits/VBoxContainer"]
layout_mode = 2
theme = ExtResource("4_cdtq7")
text = "https://pixabay.com/sound-effects/pageturn-102978/"
uri = "https://pixabay.com/sound-effects/pageturn-102978/"

[node name="Label4" type="Label" parent="Credits/VBoxContainer"]
layout_mode = 2
text = "Anvil / Forge"
label_settings = ExtResource("5_iiqke")

[node name="LinkButton4" type="LinkButton" parent="Credits/VBoxContainer"]
layout_mode = 2
theme = ExtResource("4_cdtq7")
text = "https://pixabay.com/sound-effects/hammering-on-anvil-71902/"
uri = "https://pixabay.com/sound-effects/hammering-on-anvil-71902/"

[node name="Label5" type="Label" parent="Credits/VBoxContainer"]
layout_mode = 2
text = "Select Material or Equipment"
label_settings = ExtResource("5_iiqke")

[node name="LinkButton5" type="LinkButton" parent="Credits/VBoxContainer"]
layout_mode = 2
theme = ExtResource("4_cdtq7")
text = "https://pixabay.com/sound-effects/stone-effect-254998/"
uri = "https://pixabay.com/sound-effects/stone-effect-254998/"

[node name="Label6" type="Label" parent="Credits/VBoxContainer"]
layout_mode = 2
text = "Player Attack"
label_settings = ExtResource("5_iiqke")

[node name="LinkButton6" type="LinkButton" parent="Credits/VBoxContainer"]
layout_mode = 2
theme = ExtResource("4_cdtq7")
text = "https://pixabay.com/sound-effects/sword-sound-260274/"
uri = "https://pixabay.com/sound-effects/sword-sound-260274/"

[node name="Label7" type="Label" parent="Credits/VBoxContainer"]
layout_mode = 2
text = "Player Injury"
label_settings = ExtResource("5_iiqke")

[node name="LinkButton7" type="LinkButton" parent="Credits/VBoxContainer"]
layout_mode = 2
theme = ExtResource("4_cdtq7")
text = "https://pixabay.com/sound-effects/hit-by-a-wood-230542/"
uri = "https://pixabay.com/sound-effects/hit-by-a-wood-230542/"

[node name="Label8" type="Label" parent="Credits/VBoxContainer"]
layout_mode = 2
text = "Blocked Attack"
label_settings = ExtResource("5_iiqke")

[node name="LinkButton8" type="LinkButton" parent="Credits/VBoxContainer"]
layout_mode = 2
theme = ExtResource("4_cdtq7")
text = "https://pixabay.com/sound-effects/block-6839/"
uri = "https://pixabay.com/sound-effects/block-6839/"

[node name="Label2" type="Label" parent="Credits"]
offset_left = 122.0
offset_top = -126.0
offset_right = 605.0
offset_bottom = 86.0
text = "Special thanks to everyone who provided feedback and helped make this update possible"
label_settings = ExtResource("5_iiqke")
horizontal_alignment = 1
autowrap_mode = 2

[node name="Stats" type="Node2D" parent="."]

[node name="Label" type="Label" parent="Stats"]
offset_left = -498.0
offset_top = -382.0
offset_right = -258.0
offset_bottom = -245.0
text = "Stats"
label_settings = ExtResource("2_aod8j")

[node name="StatsText" type="Label" parent="Stats"]
offset_left = -622.0
offset_top = -194.0
offset_right = -168.0
offset_bottom = 391.0
label_settings = ExtResource("5_iiqke")
horizontal_alignment = 1

[node name="BookCoverImage" type="Sprite2D" parent="Stats"]
modulate = Color(0, 0, 0, 1)
position = Vector2(350, 47)
texture = ExtResource("23_0vgu4")

[node name="UI" type="Node2D" parent="."]

[node name="PageNumR" type="Label" parent="UI"]
offset_left = 340.0
offset_top = 415.0
offset_right = 452.0
offset_bottom = 465.0
theme = ExtResource("4_cdtq7")
text = "00"
label_settings = ExtResource("5_iiqke")

[node name="PageNumL" type="Label" parent="UI"]
offset_left = -413.0
offset_top = 417.0
offset_right = -301.0
offset_bottom = 467.0
theme = ExtResource("4_cdtq7")
text = "12"
label_settings = ExtResource("5_iiqke")

[node name="Left" parent="UI" instance=ExtResource("21_p4uyu")]
offset_left = -748.0
offset_top = -500.0
offset_right = -671.0
offset_bottom = 500.0
glowSprite = ExtResource("22_sovvs")

[node name="Right" parent="UI" instance=ExtResource("21_p4uyu")]
offset_left = 747.0
offset_top = -500.0
offset_right = 824.0
offset_bottom = 500.0
scale = Vector2(-1, 1)
glowSprite = ExtResource("22_sovvs")

[connection signal="pressed" from="Exit" to="." method="close"]
[connection signal="pressed" from="Front/Home" to="." method="_on_home_pressed"]
[connection signal="pressed" from="Back/Home" to="." method="_on_home_pressed"]
[connection signal="pressed" from="BookBase/Home" to="." method="_on_home_pressed"]
[connection signal="go_to_page" from="TitlePage/TableOfContents" to="." method="update_page"]
[connection signal="go_to_page" from="EnemyInfo/RegionTitlePage/Creatures/Forest" to="." method="update_page"]
[connection signal="go_to_page" from="EnemyInfo/RegionTitlePage/Creatures/Desert" to="." method="update_page"]
[connection signal="go_to_page" from="EnemyInfo/RegionTitlePage/Creatures/Mountain" to="." method="update_page"]
[connection signal="go_to_page" from="EnemyInfo/MapTitlePage/Buttons" to="." method="update_page"]
[connection signal="go_to_page" from="Help" to="." method="update_page"]
[connection signal="pressed" from="UI/Left" to="." method="_on_left_pressed"]
[connection signal="pressed" from="UI/Right" to="." method="_on_right_pressed"]
